--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,16 @@
                 <module>reporter</module>
             </modules>
         </profile>
+        <profile>
+            <id>service-github</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <modules>
+                <module>collector</module>
+                <module>service-github</module>
+            </modules>
+        </profile>
     </profiles>
 
     <properties>
@@ -63,6 +73,11 @@
                 <groupId>com.unitvectory</groupId>
                 <artifactId>fileparamunit</artifactId>
                 <version>${fileparamunit.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-cli</groupId>
+                <artifactId>commons-cli</artifactId>
+                <version>1.8.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
