Building out demo and persistence layers

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
             </activation>
             <modules>
                 <module>collector</module>
+                <module>service-demo</module>
                 <module>service-github</module>
                 <module>collector-app</module>
             </modules>
