--- a/service-demo/pom.xml
+++ b/service-demo/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <groupId>com.unitvectory.serviceauditreport</groupId>
-    <artifactId>core-app</artifactId>
+    <artifactId>service-demo</artifactId>
 
     <properties>
     </properties>
@@ -22,21 +22,19 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <groupId>com.unitvectory.serviceauditreport</groupId>
+            <artifactId>collector</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
+            <groupId>com.unitvectory.serviceauditreport</groupId>
+            <artifactId>analyzer</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.16.1</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
+            <groupId>com.unitvectory.serviceauditreport</groupId>
+            <artifactId>reporter</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
