New concept for core implementation
After much thought on the initial Spring Boot 3 based design with multiple modules, taking a dramatically new direction.   The initial design allowed me to explore the underlying objectives of the various components allowing for a more focused on the key components.

--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,24 @@
     <description>serviceauditreport</description>
 
     <modules>
+        <module>serviceauditcore</module>
         <module>core</module>
         <module>core-app</module>
     </modules>
     <profiles>
+        
+        <profile>
+            <id>core</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <modules>
+            </modules>
+        </profile>
         <profile>
             <id>collector</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <activeByDefault>false</activeByDefault>
             </activation>
             <modules>
                 <module>collector</module>
@@ -36,7 +46,7 @@
         <profile>
             <id>analyzer</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <activeByDefault>false</activeByDefault>
             </activation>
             <modules>
                 <module>analyzer</module>
@@ -46,7 +56,7 @@
         <profile>
             <id>reporter</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <activeByDefault>false</activeByDefault>
             </activation>
             <modules>
                 <module>reporter</module>
