--- a/core-app/pom.xml
+++ b/core-app/pom.xml
@@ -18,12 +18,12 @@
     <dependencies>
         <dependency>
             <groupId>com.unitvectory.serviceauditreport</groupId>
-            <artifactId>core</artifactId>
+            <artifactId>serviceauditcore</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <groupId>org.tinylog</groupId>
+            <artifactId>tinylog</artifactId>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -32,7 +32,6 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.16.1</version>
         </dependency>
         <dependency>
             <groupId>commons-cli</groupId>
