--- a/pom.xml
+++ b/pom.xml
@@ -8,37 +8,20 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.1</version>
-    </parent>
     <name>serviceauditreport</name>
     <description>serviceauditreport</description>
 
     <modules>
         <module>serviceauditcore</module>
-        <module>core</module>
         <module>core-app</module>
     </modules>
     <profiles>
-        
         <profile>
-            <id>core</id>
+            <id>collector</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
             <modules>
-            </modules>
-        </profile>
-        <profile>
-            <id>collector</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <modules>
-                <module>collector</module>
-                <module>service-demo</module>
                 <module>service-github</module>
                 <module>collector-app</module>
             </modules>
@@ -46,20 +29,18 @@
         <profile>
             <id>analyzer</id>
             <activation>
-                <activeByDefault>false</activeByDefault>
+                <activeByDefault>true</activeByDefault>
             </activation>
             <modules>
-                <module>analyzer</module>
                 <module>analyzer-app</module>
             </modules>
         </profile>
         <profile>
             <id>reporter</id>
             <activation>
-                <activeByDefault>false</activeByDefault>
+                <activeByDefault>true</activeByDefault>
             </activation>
             <modules>
-                <module>reporter</module>
                 <module>reporter-app</module>
             </modules>
         </profile>
@@ -70,7 +51,6 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <fileparamunit.version>0.0.4</fileparamunit.version>
     </properties>
 
     <dependencyManagement>
@@ -78,22 +58,39 @@
             <dependency>
                 <groupId>com.unitvectory</groupId>
                 <artifactId>fileparamunit</artifactId>
-                <version>${fileparamunit.version}</version>
+                <version>0.0.4</version>
+            </dependency>
+            <dependency>
+                <groupId>org.tinylog</groupId>
+                <artifactId>tinylog</artifactId>
+                <version>1.3.6</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>2.17.2</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>2.16.1</version>
             </dependency>
             <dependency>
                 <groupId>commons-cli</groupId>
                 <artifactId>commons-cli</artifactId>
                 <version>1.8.0</version>
             </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.34</version>
+                <scope>provided</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
