--- a/reporter-app/pom.xml
+++ b/reporter-app/pom.xml
@@ -18,7 +18,7 @@
     <dependencies>
         <dependency>
             <groupId>com.unitvectory.serviceauditreport</groupId>
-            <artifactId>reporter</artifactId>
+            <artifactId>serviceauditcore</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
