--- a/collector-app/pom.xml
+++ b/collector-app/pom.xml
@@ -36,11 +36,9 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>    
-                    <mainClass>com.unitvectory.serviceauditreport.collector.app.CollectorApp</mainClass>
-                </configuration>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.3.0</version>
             </plugin>
         </plugins>
     </build>
