--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/java,maven,eclipse,intellij,macos,windows,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,maven,eclipse,intellij,macos,windows,visualstudiocode
 
+# Custom .gitignore for this project
+data
+
 .vscode
 
 ### Eclipse ###
