--- a/collector-app/pom.xml
+++ b/collector-app/pom.xml
@@ -26,6 +26,13 @@
             <artifactId>core-app</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <!-- TODO: Ideally this isn't an explicit dependency but including this for development-->
+        <dependency>
+            <groupId>com.unitvectory.serviceauditreport</groupId>
+            <artifactId>service-github</artifactId>
+            <version>${project.version}</version>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
