--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
                 <version>1.8.0</version>
             </dependency>
             <dependency>
+                <groupId>com.bucket4j</groupId>
+                <artifactId>bucket4j_jdk17-core</artifactId>
+                <version>8.13.1</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.httpcomponents.client5</groupId>
                 <artifactId>httpclient5</artifactId>
                 <version>5.3.1</version>
